--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -1,1 +1,63 @@
-<p>navbar works!</p>
+<nav class="navbar">
+  <div class="container-fluid bg-dark custom-navbar">
+    <a class="navbar-brand" href="#">
+      <img src="logo.jpg" alt="Bootstrap" width="80" height="80">
+    </a>
+
+    <div class="d-flex flex-column">
+
+      <div class="d-flex align-items-center">
+        <a class="navbar-brand text-white login-link" href="#">LOGIN
+        <i class="bi bi-person-fill-gear icon text-white" style="font-size: 20px; margin-left: 5px;"></i></a>
+      </div>
+
+      <div class="d-flex search-container">
+        <input type="text" class="form-control search-input" placeholder="Search enterie store here...">
+        <button class="btn btn-primary search-button">
+          <i class="bi bi-search"></i>
+        </button>
+      </div>
+
+    </div>
+  </div>
+</nav>
+
+<!---navbar2-->
+<nav class="navbar navbar-expand-lg m-2">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" 
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <!-- Left Aligned Navbar Links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown link
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact us</a>
+        </li>
+      </ul>
+
+      <!-- Right Aligned List Group -->
+      <button class="btn btn-primary cart-button">
+        <i class="bi bi-cart-check-fill"></i> nb item(s) - $montant
+      </button>
+    </div>
+  </div>
+</nav>
