navBar & Footer done

--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -1,1 +1,47 @@
-<p>footer works!</p>
+<footer class="footer bg-dark text-white pt-4">
+    <div class="container">
+        <div class="row">
+            <!-- About Us -->
+            <div class="col-md-3">
+                <h5>About Us</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="col-md-3">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Home</a></li>
+                    <li><a href="#" class="text-white">Shop</a></li>
+                    <li><a href="#" class="text-white">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <!-- Social Media & Subscription -->
+            <div class="col-md-3">
+                <h5>Follow Us</h5>
+                <div class="social-icons mb-2">
+                    <a href="#" class="text-white me-2"><i class="bi bi-facebook" style="font-size: 1.5rem;"></i></a>
+                    <a href="#" class="text-white me-2"><i class="bi bi-instagram" style="font-size: 1.5rem;"></i></a>
+                    <a href="#" class="text-white me-2"><i class="bi bi-twitter" style="font-size: 1.5rem;"></i></a>
+                    <a href="#" class="text-white"><i class="bi bi-linkedin" style="font-size: 1.5rem;"></i></a>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <h5>Our Location</h5>
+                <iframe class="w-100 rounded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=isetch+(isetCh)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                        href="https://www.gps.ie/">
+                        gps systems</a>
+                </iframe>
+            </div>
+        </div>
+
+        <hr class="bg-white my-4">
+
+        <div class="text-center">
+            <p>&copy; 2024 Aymen_Magri & Sara_Kalai</p>
+        </div>
+    </div>
+</footer>
