--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -1,19 +1,19 @@
-<footer class="footer bg-dark text-white pt-4">
+<footer class="footer text-white pt-4">
     <div class="container">
         <div class="row">
             <!-- About Us -->
             <div class="col-md-3">
                 <h5>About Us</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
+                <p style="color: #abd1c6;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
             </div>
 
             <!-- Quick Links -->
             <div class="col-md-3">
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-white">Home</a></li>
-                    <li><a href="#" class="text-white">Shop</a></li>
-                    <li><a href="#" class="text-white">Contact Us</a></li>
+                    <li><a href="#" style="color: #abd1c6;">Home</a></li>
+                    <li><a href="#" style="color: #abd1c6;">Shop</a></li>
+                    <li><a href="#" style="color: #abd1c6;">Contact Us</a></li>
                 </ul>
             </div>
 
@@ -21,10 +21,10 @@
             <div class="col-md-3">
                 <h5>Follow Us</h5>
                 <div class="social-icons mb-2">
-                    <a href="#" class="text-white me-2"><i class="bi bi-facebook" style="font-size: 1.5rem;"></i></a>
-                    <a href="#" class="text-white me-2"><i class="bi bi-instagram" style="font-size: 1.5rem;"></i></a>
-                    <a href="#" class="text-white me-2"><i class="bi bi-twitter" style="font-size: 1.5rem;"></i></a>
-                    <a href="#" class="text-white"><i class="bi bi-linkedin" style="font-size: 1.5rem;"></i></a>
+                    <a href="#" class="me-2"><i class="bi bi-facebook" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
+                    <a href="#" class="me-2"><i class="bi bi-instagram" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
+                    <a href="#" class="me-2"><i class="bi bi-twitter" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
+                    <a href="#"><i class="bi bi-linkedin" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
                 </div>
             </div>
 
