--- a/src/app/compnents/error/error.component.html
+++ b/src/app/compnents/error/error.component.html
@@ -1,3 +1,4 @@
-<div class="m-3"
-    style="background-image: url('404.gif'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh;">
+<div>
+    <button class="btnBack"><i class="animation"></i>back to home page<i class="animation"></i>
+    </button>
 </div>
