--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -34,10 +34,10 @@
       <!-- Left Aligned Navbar Links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" style="color: #fffffe;" routerLink="/home">Home</a>
+          <a class="nav-link active" aria-current="page" style="color: #fffffe;" routerLink="/home" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="color: #fffffe;" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="color: #fffffe;" aria-expanded="false" routerLinkActive="active">
             Shop
           </a>
           <ul class="dropdown-menu">
@@ -47,10 +47,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: #fffffe;" routerLink="/aboutUs">About us</a>
+          <a class="nav-link" style="color: #fffffe;" routerLink="/aboutUs" routerLinkActive="active">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: #fffffe;" routerLink="/contactUs">Contact us</a>
+          <a class="nav-link" style="color: #fffffe;" routerLink="/contactUs" routerLinkActive="active">Contact us</a>
         </li>
       </ul>
 
