--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <h1 class="display-4">About Us</h1>
         <p class="lead">Empowering students through technology and collaboration.</p>
-        <button class="button">
+        <button class="button" (click)="onContactUs()">
             <span>Contact Us!</span>
         </button>
 
