--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -11,9 +11,10 @@
             <div class="col-md-3">
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" style="color: #abd1c6;">Home</a></li>
-                    <li><a href="#" style="color: #abd1c6;">Shop</a></li>
-                    <li><a href="#" style="color: #abd1c6;">Contact Us</a></li>
+                    <li><a routerLink="/home" style="color: #abd1c6;">Home</a></li>
+                    <li><a routerLink="/shop" style="color: #abd1c6;">Shop</a></li>
+                    <li><a routerLink="/aboutUs" style="color: #abd1c6;">About Us</a></li>
+                    <li><a routerLink="/contactUs" style="color: #abd1c6;">Contact Us</a></li>
                 </ul>
             </div>
 
