--- a/src/app/compnents/about-us/about-us.component.css
+++ b/src/app/compnents/about-us/about-us.component.css
@@ -1,83 +1,168 @@
 .button {
-    position: relative;
-    text-decoration: none;
-    color: #001e1d;
-    padding: 15px 30px;
-    width: 170px;
-    height: 50px;
-    font-weight: 600;
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    overflow: hidden;
-    background: linear-gradient(-45deg, #f9bc60 0%, #e16162 100% );
-    transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
-  }
-  
-  .button span , .button span::before {
-    position: absolute;
-    top: 0%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    pointer-events: none;
-    justify-content: center;
-    transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
-  }
-  
-  .button span::before {
-    content: 'Click Me!';
-    top: -100%;
-  }
-  
-  .button:before {
-    top: 0;
-    left: 0;
-    border-top: 2px solid #e8e8e8;
-    border-left: 2px solid #e8e8e8;
-  }
-  
-  .button:after {
-    bottom: 0;
-    right: 0;
-    border-bottom: 2px solid #e8e8e8;
-    border-right: 2px solid #e8e8e8;
-  }
-  
-  .button:after,
-  .button:before {
-    content: "";
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    pointer-events: none;
-    transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
-  }
-  
-  .button:hover {
-    box-shadow: 0 0 30px rgba(248 ,155, 41,0.4),
-    0 0 30px rgba(255, 15, 123,0.4);
-    ;
-  }
-  
-  .button:hover:before,
-  .button:hover:after {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .button:hover span {
-    top: 100%;
-  }
-  
-  .button:active {
-    scale: 0.95;
-    box-shadow: 0 0 10px rgba(248 ,155, 41,0.4),
-    0 0 10px rgba(255, 15, 123,0.4);
-    ;
-  }
-  /*card*/
-  
-  
+  position: relative;
+  text-decoration: none;
+  color: #001e1d;
+  padding: 15px 30px;
+  width: 170px;
+  height: 50px;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  overflow: hidden;
+  background: linear-gradient(-45deg, #f9bc60 0%, #e16162 100%);
+  transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+.button span,
+.button span::before {
+  position: absolute;
+  top: 0%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+  justify-content: center;
+  transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+.button span::before {
+  content: 'Click Me!';
+  top: -100%;
+}
+
+.button:before {
+  top: 0;
+  left: 0;
+  border-top: 2px solid #e8e8e8;
+  border-left: 2px solid #e8e8e8;
+}
+
+.button:after {
+  bottom: 0;
+  right: 0;
+  border-bottom: 2px solid #e8e8e8;
+  border-right: 2px solid #e8e8e8;
+}
+
+.button:after,
+.button:before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+.button:hover {
+  box-shadow: 0 0 30px rgba(248, 155, 41, 0.4),
+    0 0 30px rgba(255, 15, 123, 0.4);
+  ;
+}
+
+.button:hover:before,
+.button:hover:after {
+  width: 100%;
+  height: 100%;
+}
+
+.button:hover span {
+  top: 100%;
+}
+
+.button:active {
+  scale: 0.95;
+  box-shadow: 0 0 10px rgba(248, 155, 41, 0.4),
+    0 0 10px rgba(255, 15, 123, 0.4);
+  ;
+}
+
+/*card*/
+.card-dev {
+  --font-color: #323232;
+  --font-color-sub: #666;
+  --bg-color: #fff;
+  --main-color: #323232;
+  width: 300px;
+  height: 300px;
+  background: var(--bg-color);
+  border: 2px solid var(--main-color);
+  box-shadow: 4px 4px var(--main-color);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-photo {
+  transform: scale(0.3) translate(220px, 230px);
+  width: 350px;
+  height: 250px;
+  margin-left: -125px;
+  margin-top: -165px;
+  background-repeat: no-repeat;
+}
+
+
+.card-title {
+  text-align: center;
+  color: var(--font-color);
+  font-size: 27px;
+  font-weight: 400;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.card-title span {
+  font-size: 20px;
+  color: var(--font-color-sub);
+}
+
+.card-socials {
+  display: flex;
+  height: 0;
+  opacity: 0;
+  margin-top: 20px;
+  gap: 20px;
+  transition: 0.5s;
+}
+
+.card-socials-btn {
+  width: 75px;
+  height: 35px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.card-socials-btn svg {
+  width: 100%;
+  height: 100%;
+  fill: var(--main-color);
+}
+
+.card:hover>.card-socials {
+  opacity: 1;
+  height: 35px;
+}
+
+.card-socials-btn:hover {
+  transform: translateY(-5px);
+  transition: all 0.15s;
+}
+
+.card-photo:hover {
+  transition: 0.3s;
+  transform: scale(0.4) translate(160px, 150px);
+}
+
+
+h2{
+  font-weight: 700;
+  font-size: 38px;
+  text-align: center;
+  margin-bottom: 50px;
+}
