--- a/src/app/compnents/error/error.component.html
+++ b/src/app/compnents/error/error.component.html
@@ -1,4 +1,4 @@
 <div>
-    <button class="btnBack"><i class="animation"></i>back to home page<i class="animation"></i>
+    <button class="btnBack" (click)="goHome()"><i class="animation"></i>back to home page<i class="animation"></i>
     </button>
 </div>
