--- a/src/app/compnents/contact-us/contact-us.component.html
+++ b/src/app/compnents/contact-us/contact-us.component.html
@@ -1,1 +1,33 @@
-<p>contact-us works!</p>
+        <div class="row align-items-center py-5 m-4">
+
+            <div class="col-lg-4 contact-details">
+                <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="Contact Image" />
+                <h2>Get in Touch</h2>
+                <p>Your feedback is important to us!</p>
+            </div>
+
+            <div class="col-lg-8 contact-form">
+                <form>
+                    <div class="mb-3">
+                        <label for="first-name" class="form-label">First Name:</label>
+                        <input type="text" class="form-control" id="first-name" placeholder="Your First Name" name="fname" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="last-name" class="form-label">Last Name:</label>
+                        <input type="text" class="form-control" id="last-name" placeholder="Your Last Name" name="lname" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="email-address" class="form-label">Email:</label>
+                        <input type="email" class="form-control" id="email-address" placeholder="Your Email" name="email" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message:</label>
+                        <textarea class="form-control" id="message" rows="4" placeholder="Write your message here..." required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary submit-btn">Send Message</button>
+                </form>
+            </div>
+
+        </div>
+    
+
