--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -1,41 +1,50 @@
-<div class="container">
-    <!-- Header Section -->
-    <header class="bg-primary text-white text-center py-5 mt-5">
-        <div class="container">
-            <h1 class="display-4">About Us</h1>
-            <p class="lead">Empowering students through technology and collaboration.</p>
-            <button class="button" (click)="onContactUs()">
-                <span>Contact Us!</span>
-            </button>
+<!-- Header Section -->
+<header class="text-white text-center py-5">
+    <div class="container">
+        <h1 class="display-4">About Us</h1>
+        <p class="lead">Empowering students through technology and collaboration. Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Vel iste aliquam atque, facere eveniet, quam odit repudiandae voluptatibus aut
+            repellendus numquam nisi ea nihil quo ducimus error natus ipsum saepe? Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Corrupti commodi ea perferendis eum sit culpa consequatur. Officia, laboriosam
+            numquam libero hic eligendi id. Ad vero eveniet ipsam ipsa laborum autem.</p>
+        <button class="button" (click)="onContactUs()">
+            <span>Contact Us!</span>
+        </button>
 
-        </div>
-    </header>
-
-
-    <!-- About Us Section -->
-    <section class="py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-7 col-md-6">
-                    <h2>Who We Are</h2>    
-                    <p>
-                        We are the <strong>site vent en linge</strong>, Lorem ipsum dolor sit amet consectetur
-                        adipisicing
-                        elit. Cum iusto a exercitationem architecto accusantium sed voluptas necessitatibus, tempora
-                        corporis fuga, nemo impedit nihil saepe, id maxime quo corrupti excepturi iste.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor amet, a in saepe dolores iure
-                        mollitia id! Doloremque, quas. Quaerat cum nemo iusto sequi quasi mollitia harum facere ducimus
-                        natus.
-                    </p>
-                </div>
-                <div class="col-lg-5 col-md-6">
-                    <img src="logo.jpg" class="img-fluid rounded" alt="Our Team">
-                </div>
+    </div>
+</header>
+<!-- About Us Section -->
+<section class="py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-7 col-md-6">
+                <h2>Who We Are</h2>
+                <p>
+                    We are the <strong>site vent en linge</strong>, Lorem ipsum dolor sit amet consectetur
+                    adipisicing
+                    elit. Cum iusto a exercitationem architecto accusantium sed voluptas necessitatibus, tempora
+                    corporis fuga, nemo impedit nihil saepe, id maxime quo corrupti excepturi iste.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor amet, a in saepe dolores iure
+                    mollitia id! Doloremque, quas. Quaerat cum nemo iusto sequi quasi mollitia harum facere ducimus
+                    natus.
+                </p>
+            </div>
+            <div class="col-lg-5 col-md-6">
+                <img src="logo.jpg" class="img-fluid rounded" alt="Our Team">
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+<div style="height: 200px; background-image: url(wave.png);"></div>
+<div style="display: flex; justify-content: center; align-items: center;">
+    <p class="animate">Welcome to our online store! </p>
+</div>
+<div style="height: 200px; background-image: url(wave3.png); "></div>
+
+<div class="container">
     <!--our devaloppers -->
     <section class="py-5">
         <div class="container">
