--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer text-white pt-4">
+<footer class="footer pt-4 text-white text-center">
     <div class="container">
         <div class="row">
             <!-- About Us -->
