--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -1,1 +1,60 @@
-<p>home works!</p>
+
+<div class="text-center welcome py-5 text-white">
+    <h1 class="display-4">Welcome to our website</h1>
+    <p class="lead">Empowering students through technology and collaboration. Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Vel iste aliquam atque, facere eveniet?</p>
+    <button class="button" (click)="onAboutUs()">
+        <span>About Us!</span>
+    </button>
+
+</div>
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active bg-dark"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="1" class="bg-dark"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleFade" data-bs-slide-to="2" class="bg-dark"
+            aria-label="Slide 3"></button>
+    </div>
+
+    <div class="carousel-inner">
+
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="logo.jpg" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+            </div>
+        </div>
+
+
+        <div class="carousel-item" data-bs-interval="2000">
+            <img src="logo.jpg" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+            </div>
+        </div>
+
+
+        <div class="carousel-item">
+            <img src="logo.jpg" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+            </div>
+        </div>
+
+    </div>
+
+    <button class="carousel-control-prev buttonCarousel" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next buttonCarousel" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
