--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -23,7 +23,7 @@
 </nav>
 
 <!---navbar2-->
-<nav class="navbar navbar-expand-lg m-2 nav2">
+<nav class="navbar navbar-expand-lg m-2 nav2 sticky">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" 
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color: #fffffe;">
