--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <!-- Header Section -->
 <header class="text-white text-center py-5">
-    <div class="container">
+    <div class="container about-us-content">
         <h1 class="display-4">About Us</h1>
         <p class="lead">Empowering students through technology and collaboration. Lorem, ipsum dolor sit amet
             consectetur adipisicing elit. Vel iste aliquam atque, facere eveniet, quam odit repudiandae voluptatibus aut
@@ -17,7 +17,7 @@
 <section class="py-5">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-7 col-md-6">
+            <div class="col-lg-7 col-md-6 entreDuGauche">
                 <h2>Who We Are</h2>
                 <p>
                     We are the <strong>site vent en linge</strong>, Lorem ipsum dolor sit amet consectetur
@@ -31,7 +31,7 @@
                     natus.
                 </p>
             </div>
-            <div class="col-lg-5 col-md-6">
+            <div class="col-lg-5 col-md-6 entreDuDroite">
                 <img src="logo.jpg" class="img-fluid rounded" alt="Our Team">
             </div>
         </div>
