--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -41,7 +41,7 @@
             Shop
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" style="border-bottom: 1px solid #001e1d;" href="#">All Products</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
