update 4.0 & commencer le back

--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -12,7 +12,7 @@
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
                     <li><a routerLink="/home" style="color: #abd1c6;">Home</a></li>
-                    <li><a routerLink="/shop" style="color: #abd1c6;">Shop</a></li>
+                    <li><a routerLink="/listePlantes" style="color: #abd1c6;">Catalogue des Plantes</a></li>
                     <li><a routerLink="/aboutUs" style="color: #abd1c6;">About Us</a></li>
                     <li><a routerLink="/contactUs" style="color: #abd1c6;">Contact Us</a></li>
                 </ul>
