--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="container-fluid custom-navbar">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" routerLink="/home">
       <img src="logo.jpg" alt="Bootstrap" width="80" height="80">
     </a>
 
@@ -36,15 +36,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" style="color: #fffffe;" routerLink="/home" routerLinkActive="active">Home</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="color: #fffffe;" aria-expanded="false" routerLink="/shop" routerLinkActive="active">
-            Shop
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" style="border-bottom: 1px solid #001e1d;" href="#">All Products</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        
+        <li class="nav-item">
+          <a class="nav-link" style="color: #fffffe;" routerLink="/listePlantes" routerLinkActive="active">Catalogue des Plantes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" style="color: #fffffe;" routerLink="/aboutUs" routerLinkActive="active">About us</a>
