--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div class="col-lg-5 col-md-6 entreDuDroite">
-                <img src="logo.jpg" class="img-fluid rounded" alt="Our Team">
+                <img src="PlantBuddy.png" class="img-fluid rounded" alt="Our Team">
             </div>
         </div>
     </div>
