--- a/src/app/compnents/list-plants/list-plants.component.html
+++ b/src/app/compnents/list-plants/list-plants.component.html
@@ -31,43 +31,43 @@
 
 <!-- afficher selon catégorie-->
 <!--Plantes fleuries-->
-<div id="plant-fleuries" class="container">
+<div id="plant-fleuries">
     <div class="pt-3 mb-1">
-        <div class="section-title">
+        <div class="section-title container">
             <h4 class=" text-uppercase font-weight-bold text-dark">Plantes fleuries</h4>
         </div>
 
-        <div class="section-decriptipon">
+        <div class="section-decriptipon d-flex flex-wrap justify-content-center">
             @for (plant of plantsFleuries; track plant.id) {
-            <app-plant-item [plant]="plant"></app-plant-item>
+            <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
             }
         </div>
     </div>
 </div>
 <!--Plantes cactus et succulentes-->
-<div id="plant-cactus" class="container">
+<div id="plant-cactus">
     <div class="pt-5 mb-3">
-        <div class="section-title">
+        <div class="section-title container">
             <h4 class=" text-uppercase font-weight-bold text-dark">Cactus et succulentes</h4>
         </div>
 
-        <div class="section-decriptipon">
+        <div class="section-decriptipon d-flex flex-wrap justify-content-center">
             @for (plant of plantsCactus; track plant.id) {
-            <app-plant-item [plant]="plant"></app-plant-item>
+            <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
             }
         </div>
     </div>
 </div>
 <!--Plantes purificatrices d'air-->
-<div id="plant-purificatrices" class="container">
+<div id="plant-purificatrices">
     <div class="pt-5 mb-3">
-        <div class="section-title">
+        <div class="section-title container">
             <h4 class=" text-uppercase font-weight-bold text-dark">Plantes purificatrices d'air</h4>
         </div>
 
-        <div class="section-decriptipon">
+        <div class="section-decriptipon d-flex flex-wrap justify-content-center">
             @for (plant of plantsPurificatrices; track plant.id) {
-            <app-plant-item [plant]="plant"></app-plant-item>
+            <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
             }
         </div>
     </div>
