--- a/src/app/compnents/plant-item/plant-item.component.html
+++ b/src/app/compnents/plant-item/plant-item.component.html
@@ -1,3 +1,30 @@
-<div class="plant-item">
-    <h5>{{plant.name}}</h5>
-</div>
+<div class="plant-item">    
+    <div class="card" style="width: 18rem;">
+        <div class="first">
+
+        <div class="d-flex justify-content-between align-items-center">
+
+            <span class="discount">En stock</span>
+            <button class="wishlist" title="Ajouter à la liste de souhaits"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
+        </div>
+    </div>
+
+    <img [src]="plant.images[0]" width="100px" height="200px" class="card-img-top image" alt="...">
+    <div class="card-body">
+
+        <h5 class="card-title title" style="color: #12442C; font-size: 24px;">{{plant.name}}</h5>
+        <div class="d-flex flex-column mb-2 align-items-end">
+            <span class="new-price">{{plant.price}}€</span>
+            <small class="old-price ">{{plant.price+2}}€</small>
+        </div>
+        <p class="card-text" style=" font-size: 17px;"><span class="title">Description : </span> {{plant.description}}.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item" style=" font-size: 17px;"><span class="title">Fun_filter : </span> {{plant.fun_filter}}</li>
+    </ul>
+    <div class="card-body d-flex justify-content-between ">
+        <button class="btn btn-primary" title="Ajouter au panier">Ajouter au panier</button>
+        <button class="btn btn-secondary" title="Voir la plante">Voir</button>
+        </div>
+    </div>
+</div>  
