--- a/src/app/compnents/list-plants/list-plants.component.html
+++ b/src/app/compnents/list-plants/list-plants.component.html
@@ -1,7 +1,7 @@
 <div class="text-center welcome py-5 text-white">
     <div class="welcome-content">
         <h1 class="display-4 mb-5">Catalogue des Plantes</h1>
-        <div class="d-flex justify-content-center gap-5">
+        <div class="d-flex justify-content-center gap-5 flex-wrap">
             <!-- Sélection du filtre amusant -->
             <div class="input-group mb-3" style="width: 450px;">
                 <label class="input-group-text" for="inputGroupSelect01">Filtre Amusant</label>
