--- a/src/app/compnents/footer/footer.component.css
+++ b/src/app/compnents/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
     padding-bottom: 20px;
     font-size: 18px;
-    background-color: #004643;
+    background-color: #529F76;
     
 }
 
@@ -10,7 +10,8 @@
 }
 
 h5{
-    color: #f9bc60;
+    color: #1C593A;
+    font-weight: bold;
 }  
 
 
