--- a/src/app/compnents/footer/footer.component.html
+++ b/src/app/compnents/footer/footer.component.html
@@ -4,17 +4,17 @@
             <!-- About Us -->
             <div class="col-md-3">
                 <h5>About Us</h5>
-                <p style="color: #abd1c6;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
+                <p style="color: #B9F1C3;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
             </div>
 
             <!-- Quick Links -->
             <div class="col-md-3">
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
-                    <li><a routerLink="/home" style="color: #abd1c6;">Home</a></li>
-                    <li><a routerLink="/listePlantes" style="color: #abd1c6;">Catalogue des Plantes</a></li>
-                    <li><a routerLink="/aboutUs" style="color: #abd1c6;">About Us</a></li>
-                    <li><a routerLink="/contactUs" style="color: #abd1c6;">Contact Us</a></li>
+                    <li><a routerLink="/home" style="color: #B9F1C3;">Home</a></li>
+                    <li><a routerLink="/listePlantes" style="color: #B9F1C3;">Catalogue des Plantes</a></li>
+                    <li><a routerLink="/aboutUs" style="color: #B9F1C3;">About Us</a></li>
+                    <li><a routerLink="/contactUs" style="color: #B9F1C3;">Contact Us</a></li>
                 </ul>
             </div>
 
@@ -22,10 +22,10 @@
             <div class="col-md-3">
                 <h5>Follow Us</h5>
                 <div class="social-icons mb-2">
-                    <a href="#" class="me-2"><i class="bi bi-facebook" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
-                    <a href="#" class="me-2"><i class="bi bi-instagram" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
-                    <a href="#" class="me-2"><i class="bi bi-twitter" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
-                    <a href="#"><i class="bi bi-linkedin" style="font-size: 1.5rem; color: #abd1c6;"></i></a>
+                    <a href="#" class="me-2"><i class="bi bi-facebook" style="font-size: 1.5rem; color: #B9F1C3;"></i></a>
+                    <a href="#" class="me-2"><i class="bi bi-instagram" style="font-size: 1.5rem; color: #B9F1C3;"></i></a>
+                    <a href="#" class="me-2"><i class="bi bi-twitter" style="font-size: 1.5rem; color: #B9F1C3;"></i></a>
+                    <a href="#"><i class="bi bi-linkedin" style="font-size: 1.5rem; color: #B9F1C3;"></i></a>
                 </div>
             </div>
 
@@ -39,9 +39,9 @@
             </div>
         </div>
 
-        <hr class="bg-white my-4">
+        <hr class="my-4">
 
-        <div class="text-center">
+        <div class="text-center" style="color: #B9F1C3;">
             <p>&copy; 2024 Aymen_Magri & Sara_Kalai</p>
         </div>
     </div>
