--- a/src/app/compnents/back-to-top-button/back-to-top-button.component.css
+++ b/src/app/compnents/back-to-top-button/back-to-top-button.component.css
@@ -5,18 +5,18 @@
     border-radius: 50%;
     padding: 10px;
     background-color: #f9bc60;
-    color: #001e1d;
+    color: #1C593A;
     cursor: pointer;
     font-size: 1.5rem;
     width: 50px;
     height: 50px;
-    border: 1px solid #001e1d;
+    border: 1px solid #1C593A;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.315);
     transition: all 0.3s ease;
 }
 
 
 #backToTop:hover {
-    background-color: #001e1d;
+    background-color: #1C593A;
     color: #f9bc60;
 }
