--- a/src/app/compnents/list-plants/list-plants.component.css
+++ b/src/app/compnents/list-plants/list-plants.component.css
@@ -1,14 +1,9 @@
 .section-title {
     padding: 15px;
-    background: #FFFFFF;
-    border: 1px solid #dee2e6;
-    border-left: 7px solid #f9bc60;
-}
-.section-decriptipon {
-    padding: 55px;
-    color: #001e1d;
-    font-size: 17px;
-    font-weight: bolder;
+    background: #72B58C;
+    border: 1px solid #72B58C;
+    border-left: 7px solid #1C593A;
+    color: white;
 }
 
 /***/
