--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -7,12 +7,12 @@
     <div class="d-flex flex-column">
 
       <div class="d-flex align-items-center login-container">
-        <a class="navbar-brand login-link" style="color: #001e1d;" routerLink="/login">LOGIN
-        <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #001e1d;"></i></a>
+        <a class="navbar-brand login-link" style="color: #1C593A;" routerLink="/login">LOGIN
+        <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
       </div>
 
       <div class="d-flex search-container">
-        <input type="text" class="form-control search-input" placeholder="Search enterie store here...">
+        <input type="text" class="form-control search-input" style="color: #1C593A;" placeholder="Search enterie store here...">
         <button class="btn search-button">
           <i class="bi bi-search"></i>
         </button>
