--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #abd1c6;
+  background-color: #B9F1C3;
   font-family: 'Questrial', sans-serif;
 
 }
