--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="container-fluid custom-navbar">
     <a class="navbar-brand" routerLink="/home">
-      <img src="logo.png" alt="Bootstrap" width="80" height="80">
+      <img src="icone.png" alt="Bootstrap" width="150" height="100">
     </a>
 
     <div class="d-flex flex-column">
