--- a/src/app/compnents/about-us/about-us.component.css
+++ b/src/app/compnents/about-us/about-us.component.css
@@ -169,10 +169,10 @@ h2{
 
 
 header {
-  background-image: url(../../../../public/wave2.png);
+  background-image: url(../../../../public/waveG.png);
   background-size: cover;
   background-position: center;
-  height: 610px;
+  height: 420px;
 }
 
 .animate{
