--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="text-center welcome py-5 text-white">
     <div class="welcome-content">
-        <h1 class="display-4">Welcome to our website</h1>
+        <h1 class="display-4">Welcome to PlantBuddy</h1>
         <p class="lead">Empowering students through technology and collaboration. Lorem, ipsum dolor sit amet
         consectetur adipisicing elit. Vel iste aliquam atque, facere eveniet?</p>
         <button class="button" (click)="onAboutUs()">
