--- a/src/app/compnents/contact-us/contact-us.component.html
+++ b/src/app/compnents/contact-us/contact-us.component.html
@@ -24,7 +24,7 @@
                         <label for="message" class="form-label">Message:</label>
                         <textarea class="form-control" id="message" rows="4" placeholder="Write your message here..." required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary submit-btn">Send Message</button>
+                    <button type="submit" class="submit-btn">Send Message<i class="bi bi-send-plus" style="margin-left: 10px;"></i></button>
                 </form>
             </div>
 
