--- a/src/app/compnents/panier/panier.component.css
+++ b/src/app/compnents/panier/panier.component.css
@@ -2,14 +2,19 @@
     max-width: 900px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ddd;
+    border: none;
     border-radius: 10px;
-    background-color: #f9f9f9;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.315);
+    background-color: #629A74;
+    box-shadow: 0 0 10px 0 #1C593A;
 }
 
 .cart-header {
     text-align: center;
+    color: #1C593A;
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -18,7 +23,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
-    border-bottom: 3px solid #abd1c6;
+    border-bottom: 3px solid #B9F1C3;
 }
 
 .cart-item:last-child {
@@ -29,4 +34,5 @@
     text-align: right;
     font-weight: bold;
     margin-top: 20px;
+    font-size: 1.5rem;
 }
