--- a/src/app/compnents/plant-item/plant-item.component.html
+++ b/src/app/compnents/plant-item/plant-item.component.html
@@ -1,11 +1,11 @@
-<div class="plant-item">   
+<div class="plant-item">  
     <div class="card" style="width: 18rem;">
         <div class="first">
 
         <div class="d-flex justify-content-between align-items-center">
 
-            <span class="discount">En stock</span>
-            <button class="wishlist" title="Ajouter à la liste de souhaits"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
+            <span class="discount" [ngClass]="{'c1': plant.in_stock, 'c2': !plant.in_stock}">{{plant.in_stock ? 'In stock' : 'Out of stock'}}</span>
+            <button class="wishlist" title="Add to wishlist"><i class="bi bi-heart" style="font-size: 20px;"></i></button>
         </div>
     </div>
 
@@ -14,8 +14,8 @@
 
         <h5 class="card-title title" style="color: #1C593A; font-size: 24px;">{{plant.name}}</h5>
         <div class="d-flex flex-column mb-2 align-items-end">
-            <span class="new-price">{{plant.price | currency:'TND'}}</span>
-            <small class="old-price">{{plant.price + 2 | currency:'TND'}}</small>
+            <span class="new-price">{{plant.price | currency:'USD'}}</span>
+            <small class="old-price">{{plant.price + 2 | currency:'USD'}}</small>
         </div>
         <p class="card-text" style=" font-size: 17px;"><span class="title">Description : </span> {{plant.description}}.</p>
     </div>
@@ -23,8 +23,8 @@
         <li class="list-group-item" style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;"><span class="title">Fun_filter : </span> {{plant.fun_filter}}</li>
     </ul>
     <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
-        <button class="btn" style="background-color: #1C593A; color: #fff;" title="Ajouter au panier">Ajouter au panier</button>
-        <button class="btn" style="background-color: #529F76; color: #fff;" title="Voir la plante">Voir</button>
+        <button class="btn" style="background-color: #1C593A; color: #fff;" title="Add to cart">Add to cart</button>
+        <a [routerLink]="['/plant', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">View</button></a>
         </div>
     </div>
-</div>  
+</div>
